config: site navigation settings

--- a/_config.yml
+++ b/_config.yml
@@ -26,3 +26,13 @@ kramdown:
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
+
+nav:
+  - title: Home
+    url: /
+  - title: Projects
+    url: /projects/
+  - title: Teaching
+    url: /teaching/
+  - title: Contact
+    url: /contact/
