--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -13,6 +13,7 @@ jobs:
     with:
       repository: ${{ github.repository }}
       artifact_name: main-site
+      require_npm: true
     secrets: inherit
   
   build-teaching:
