--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,10 @@ markdown: kramdown
 kramdown:
   highlighter: rouge
   input: GFM
-
+sass:
+  load_paths:
+    - _sass
+    - node_modules/bootstrap/scss
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
@@ -37,4 +40,4 @@ nav:
 
 google_analytics: G-X43BZS6F4C
 
-include: ['.lycheeignore']
+include: [".lycheeignore"]
