--- a/.github/workflows/build-site.yml
+++ b/.github/workflows/build-site.yml
@@ -16,7 +16,6 @@ on:
         description: 'Artifact name'
         required: true
         type: string
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -25,7 +24,6 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: ${{ inputs.repository }}
-          token: ${{ secrets.PAT }}
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
@@ -37,7 +35,7 @@ jobs:
         with:
           node-version: 20
           cache: 'npm'
-      - if: ${{ inputs.require_npm }}
+      - if: ${{ inputs.require_npm == true }}
         name: Install Node Dependencies
         run: npm install
       - run: ls
