content: instructions for CS0449 check-off meeting
New page found at: <root>/meet-with-me/

To be used for other purposes later, but for now, using for CS0449
Checkoff meeting scheduling.

--- a/_config.yml
+++ b/_config.yml
@@ -41,6 +41,8 @@ nav:
     url: /resume/
   - title: Contact
     url: /contact/
+  - title: Meet
+    url: /meet-with-me/
 
 google_analytics: G-X43BZS6F4C
 
