style: merge pages into single page
Projects page and teaching page merged into main index.html

--- a/_config.yml
+++ b/_config.yml
@@ -34,9 +34,9 @@ nav:
   - title: Home
     url: /
   - title: Projects
-    url: /projects/
+    url: /#projects
   - title: Teaching
-    url: /teaching/
+    url: /#teaching
   - title: Résumé
     url: /resume/
   - title: Contact
