content: add keybase.io link to header

--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ url: "https://people.cs.pitt.edu"
 twitter_username: _shinwookim
 github_username: shinwookim
 linkedin_username: kimshinwoo
+keybase_username: shinwookim
 
 collections:
   pages:
