--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ nav:
   - title: Projects
     url: /#projects
   - title: Teaching
-    url: /#teaching
+    url: /teaching/
   - title: Résumé
     url: /resume/
   - title: Meet
