--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Shinwoo Kim
 author: Shinwoo Kim
 email: shinwookim@pitt.edu
 description: >-
-  I am a software developer based in Pittsburg PA USA who is interested in 
+  I am a software developer based in Pittsburgh who is interested in 
   computer architecture, distributed/operating systems, and compilers.
 baseurl: "/~shk148"
 url: "https://people.cs.pitt.edu"
