--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,8 @@ collections:
     output: true
     permalink: /:path/
 
+permalink: /:title:output_ext
+
 markdown: kramdown
 kramdown:
   highlighter: rouge
