build: migrate to GitHub pages

--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,9 @@ title: Shinwoo Kim
 author: Shinwoo Kim
 email: shinwookim@pitt.edu
 description: >-
-  I am a software developer based in Pittsburgh who is interested in 
+  I am a software developer based in Pittsburgh who is interested in
   computer architecture, distributed/operating systems, and compilers.
-baseurl: "/~shk148"
-url: "https://people.cs.pitt.edu"
+url: "https://shinwookim.github.io"
 twitter_username: _shinwookim
 github_username: shinwookim
 linkedin_username: kimshinwoo
