content: graduated! Bye Pitt :(

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Shinwoo Kim
 author: Shinwoo Kim
-email: shinwookim@pitt.edu
+email: shinwookim@proton.me
 description: >-
   I am a software developer based in Pittsburgh who is interested in
   computer architecture, distributed/operating systems, and compilers.
