style: update header for better responsive design

--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,10 @@ github_username: shinwookim
 linkedin_username: kimshinwoo
 keybase_username: shinwookim
 
+header_info:
+  job_title: <s>Software Engineer</s><br />Enlisted Soldier
+  company: Republic of Korea Army
+
 mastodon:
   username: shinwoo
   instance: discuss.systems
