style: restructure main pages
- Make `projects.md` its own page
- Change "Meet" to "Connect"

--- a/_config.yml
+++ b/_config.yml
@@ -43,13 +43,13 @@ nav:
   - title: Home
     url: /
   - title: Projects
-    url: /#projects
+    url: /projects/
   - title: Teaching
     url: /teaching/
   - title: Résumé
     url: /resume/
-  - title: Meet
-    url: /meet-with-me/
+  - title: Connect
+    url: /connect-with-me/
 
 google_analytics: G-X43BZS6F4C
 
