content: minor style changes and proofreading

--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,34 +1,34 @@
 - company: "[Republic of Korea Army](https://www.army.mil.kr)"
-  title: Enlisted Soldier
+  title: "Technology/Infrastructure Specialist (Enlisted)"
   start_year: 2025
   end_year: 2026
 
-- company: "[University of Pittsburgh](https://www.cs.pitt.edu/)"
-  title: Part-Time Instructor/Teaching Assistant
+- company: "[University of Pittsburgh (SCI)](https://www.cs.pitt.edu/)"
+  title: "Part-Time Instructor/Teaching Assistant"
   start_year: 2021
   end_year: 2024
 
 - company: "[Ansys Inc. (Digital Twin Team)](https://www.ansys.com/products/digital-twin)"
-  title: Software Engineering Intern
+  title: "Software Engineering Intern"
   start_year: 2024
   end_year: 2024
 
 - company: "[University of Pittsburgh](https://www.sci.pitt.edu/)"
-  title: Graduate Student
+  title: "Graduate Student"
   start_year: 2023
   end_year: 2024
 
-- company: "[University of Pittsburgh](https://admissions.pitt.edu/dreamteam/)"
-  title: Diversity Recruitment Educator/Mentor
+- company: "[University of Pittsburgh (Admissions)](https://admissions.pitt.edu/dreamteam/)"
+  title: "Diversity Recruitment Educator"
   start_year: 2021
   end_year: 2022
 
-- company: "[University of Pittsburgh](https://www.frederickhonors.pitt.edu/)"
-  title: Honors STEM Ambassador Fellow
+- company: "[University of Pittsburgh (Honors College)](https://www.frederickhonors.pitt.edu/)"
+  title: "STEM Ambassador Fellow"
   start_year: 2021
   end_year: 2022
 
 - company: "[University of Pittsburgh](https://www.sci.pitt.edu/)"
-  title: Undergraduate Student
+  title: "Undergraduate Student"
   start_year: 2021
   end_year: 2023
